WIP basic examples

--- a/dev_reports/02_fiiting_a_simple_model.ipynb
+++ b/dev_reports/02_fiiting_a_simple_model.ipynb
@@ -30,7 +30,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\simon\\Documents\\mempyfit\\mempyfit\\dataset.py:61: UserWarning: No temperature given for t-OD and no temperature found in labels.\n",
+      "C:\\Users\\simon\\Documents\\mempyfit\\mempyfit\\dataset.py:62: UserWarning: No temperature given for t-OD and no temperature found in labels.\n",
       "  warnings.warn(f\"No temperature given for {name} and no temperature found in labels.\")\n"
      ]
     },
@@ -83,24 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "759d42ef",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
+     "ename": "AttributeError",
+     "evalue": "'Dataset' object has no attribute 'plot'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m fig, ax = ds.plot(\u001b[33m'\u001b[39m\u001b[33mt-OD\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mTypeError\u001b[39m: cannot unpack non-iterable NoneType object"
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mds\u001b[49m\u001b[43m.\u001b[49m\u001b[43mplot\u001b[49m(\u001b[33m'\u001b[39m\u001b[33mt-OD\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Dataset' object has no attribute 'plot'"
      ]
     }
    ],
    "source": [
-    "fig, ax = ds.plot('t-OD')"
+    "ds.plot('t-OD')"
    ]
   },
   {
