--- a/dev_reports/02_fiiting_a_simple_model.ipynb
+++ b/dev_reports/02_fiiting_a_simple_model.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a107dd0f",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c639af8b",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7f616f38",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f27dc151",
    "metadata": {},
    "outputs": [
@@ -272,21 +272,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mempyfit_test",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Julia 1.12.1",
+   "language": "julia",
+   "name": "julia-1.12"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.12.1"
   }
  },
  "nbformat": 4,
