--- a/dev_reports/02_fiiting_a_simple_model.ipynb
+++ b/dev_reports/02_fiiting_a_simple_model.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a107dd0f",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c639af8b",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7f616f38",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "np.float64(0.10723981900452495)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,31 +85,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f27dc151",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mfit\u001b[49m\u001b[43m.\u001b[49m\u001b[43msimulator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m.\u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\simon\\Documents\\mempyfit\\dev_reports\\logistic_growth\\simulation.py:12\u001b[39m, in \u001b[36msimulator\u001b[39m\u001b[34m(parameters)\u001b[39m\n\u001b[32m      0\u001b[39m <Error retrieving source code with stack_data see ipython/ipython#13598>\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\simon\\.julia\\conda\\3\\envs\\mempyfit_test\\Lib\\site-packages\\scipy\\integrate\\_ivp\\ivp.py:621\u001b[39m, in \u001b[36msolve_ivp\u001b[39m\u001b[34m(fun, t_span, y0, method, t_eval, dense_output, events, vectorized, args, **options)\u001b[39m\n\u001b[32m    618\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m method \u001b[38;5;129;01min\u001b[39;00m METHODS:\n\u001b[32m    619\u001b[39m     method = METHODS[method]\n\u001b[32m--> \u001b[39m\u001b[32m621\u001b[39m solver = \u001b[43mmethod\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfun\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvectorized\u001b[49m\u001b[43m=\u001b[49m\u001b[43mvectorized\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    623\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m t_eval \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    624\u001b[39m     ts = [t0]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\simon\\.julia\\conda\\3\\envs\\mempyfit_test\\Lib\\site-packages\\scipy\\integrate\\_ivp\\rk.py:94\u001b[39m, in \u001b[36mRungeKutta.__init__\u001b[39m\u001b[34m(self, fun, t0, y0, t_bound, max_step, rtol, atol, vectorized, first_step, **extraneous)\u001b[39m\n\u001b[32m     92\u001b[39m \u001b[38;5;28mself\u001b[39m.max_step = validate_max_step(max_step)\n\u001b[32m     93\u001b[39m \u001b[38;5;28mself\u001b[39m.rtol, \u001b[38;5;28mself\u001b[39m.atol = validate_tol(rtol, atol, \u001b[38;5;28mself\u001b[39m.n)\n\u001b[32m---> \u001b[39m\u001b[32m94\u001b[39m \u001b[38;5;28mself\u001b[39m.f = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     95\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m first_step \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     96\u001b[39m     \u001b[38;5;28mself\u001b[39m.h_abs = select_initial_step(\n\u001b[32m     97\u001b[39m         \u001b[38;5;28mself\u001b[39m.fun, \u001b[38;5;28mself\u001b[39m.t, \u001b[38;5;28mself\u001b[39m.y, t_bound, max_step, \u001b[38;5;28mself\u001b[39m.f, \u001b[38;5;28mself\u001b[39m.direction,\n\u001b[32m     98\u001b[39m         \u001b[38;5;28mself\u001b[39m.error_estimator_order, \u001b[38;5;28mself\u001b[39m.rtol, \u001b[38;5;28mself\u001b[39m.atol)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\simon\\.julia\\conda\\3\\envs\\mempyfit_test\\Lib\\site-packages\\scipy\\integrate\\_ivp\\base.py:154\u001b[39m, in \u001b[36mOdeSolver.__init__.<locals>.fun\u001b[39m\u001b[34m(t, y)\u001b[39m\n\u001b[32m    152\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfun\u001b[39m(t, y):\n\u001b[32m    153\u001b[39m     \u001b[38;5;28mself\u001b[39m.nfev += \u001b[32m1\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m154\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfun_single\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\simon\\.julia\\conda\\3\\envs\\mempyfit_test\\Lib\\site-packages\\scipy\\integrate\\_ivp\\base.py:23\u001b[39m, in \u001b[36mcheck_arguments.<locals>.fun_wrapped\u001b[39m\u001b[34m(t, y)\u001b[39m\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfun_wrapped\u001b[39m(t, y):\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m np.asarray(\u001b[43mfun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m, dtype=dtype)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\simon\\.julia\\conda\\3\\envs\\mempyfit_test\\Lib\\site-packages\\scipy\\integrate\\_ivp\\ivp.py:593\u001b[39m, in \u001b[36msolve_ivp.<locals>.fun\u001b[39m\u001b[34m(t, x, fun)\u001b[39m\n\u001b[32m    592\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfun\u001b[39m(t, x, fun=fun):\n\u001b[32m--> \u001b[39m\u001b[32m593\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\simon\\Documents\\mempyfit\\dev_reports\\logistic_growth\\simulation.py:15\u001b[39m, in \u001b[36mdNdt\u001b[39m\u001b[34m(t, y, p)\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[33;03mDefinition of the log-logistic ODE. \u001b[39;00m\n\u001b[32m      7\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m \u001b[33;03m- p: Parameters. The syntax below implies that parameters are stored in a dictionary, which improves readability compared to a list or array.\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     13\u001b[39m N = y[\u001b[32m0\u001b[39m] \u001b[38;5;66;03m# unpacking state variables\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mp\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m*N*(\u001b[32m1\u001b[39m-(N/p[\u001b[33m'\u001b[39m\u001b[33mK\u001b[39m\u001b[33m'\u001b[39m]))\n",
-      "\u001b[31mTypeError\u001b[39m: 'module' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[-0.0591133 ,  0.10723982],\n",
+       "       [ 2.08866995,  0.15580236],\n",
+       "       [ 3.92118227,  0.2102387 ],\n",
+       "       [ 6.02955665,  0.28879626],\n",
+       "       [ 8.01970443,  0.37685414],\n",
+       "       [10.04926108,  0.47595494],\n",
+       "       [12.03940887,  0.57467657],\n",
+       "       [14.08866995,  0.67045572],\n",
+       "       [16.03940887,  0.7504752 ],\n",
+       "       [18.00985222,  0.81686415]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "fit.simulator(fit.parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dfd0f8dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['t-OD']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fit.data.names"
    ]
   },
   {
@@ -135,49 +157,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1731540",
+   "execution_count": 20,
+   "id": "7b095732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d94d3250",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:53: SyntaxWarning: list indices must be integers or slices, not tuple; perhaps you missed a comma?\n",
-      "<>:53: SyntaxWarning: list indices must be integers or slices, not tuple; perhaps you missed a comma?\n",
-      "C:\\Users\\simon\\AppData\\Local\\Temp\\ipykernel_8692\\2344753370.py:53: SyntaxWarning: list indices must be integers or slices, not tuple; perhaps you missed a comma?\n",
-      "  y0 = [data['t-OD']][0,1] # initial conditions for the ODE\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mnp\u001b[49m.ssq\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "fit = ModelFit()\n",
-    "fit.data = data # data\n",
-    "fit.parameters = \n",
-    "\n",
-    "\n",
-    "\n",
-    "def define_simulator(data):\n",
-    "    \"\"\"\n",
-    "    This is a second-order function that takes data as input \n",
-    "    and returns a simulator function as output. \n",
-    "\n",
-    "    This makes it possible to \"engrain\" information from the data \n",
-    "    into the simulator, using a construct called [closure](https://en.wikipedia.org/wiki/Closure_(computer_programming)). \n",
-    "    \"\"\"\n",
-    "\n",
-    "    observed_timepoints = data['t-OD'][:,0]\n",
-    "        \n",
-    "    def simulate_logistic(\n",
-    "        parameters, # proposed parameter values \n",
-    "        t_eval = observed_timepoints\n",
-    "        ):\n",
-    "\n",
-    "       \n",
-    "    \n",
-    "    return simulate_logistic"
+    "np.ssq"
    ]
   },
   {
@@ -272,15 +279,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.12.1",
-   "language": "julia",
-   "name": "julia-1.12"
+   "display_name": "mempyfit_test",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.12.1"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
